--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -11,7 +11,7 @@ html{
 body {
   color: #fff;
   background: url("../../images/bg.png");
-  height: calc(100% - vm(27));
+  height: calc(100% - 27px);
   margin: 0;
 }
 .header {
@@ -65,7 +65,7 @@ body {
 .content{
   display: flex;
   justify-content: space-between;
-  height: calc(100% - vm(100));
+  height: calc(100% - 100px);
   padding: 0px vm(15) vm(15);
 }
 .content_left{
@@ -204,6 +204,7 @@ body {
   text-align: -webkit-center;
   border: vm(1) solid #03B6F0;
   font-weight: bolder;
+  cursor: pointer;
 }
 .map_echarts{
   height: calc(100% - 62px);
